Fix UI alignment issue and export button padding issue in devportal

--- a/portals/devportal/src/main/webapp/source/src/app/components/Apis/Details/Documents/elements.css
+++ b/portals/devportal/src/main/webapp/source/src/app/components/Apis/Details/Documents/elements.css
@@ -103,7 +103,7 @@
 #apim_elements textarea {
     color: inherit;
     line-height: inherit;
-    padding: 0
+    padding: 8px;
 }
 
 #apim_elements code,
@@ -12823,4 +12823,8 @@
 .sl-elements .Model .JsonSchemaViewer .sl-markdown-viewer p {
     font-size: 12px;
     line-height: 1.5em
+}
+
+.sl-flex.sl-flex-col.sl-w-full.sl-p-4 {
+    width: inherit;
 }
